@@ -4,7 +4,9 @@ History of collective.recipe.i18noverrides
 0.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- If no destinations are specified, we automatically copy the po files
+  to all parts that use plone.recipe.zope2instance.
+  [maurits]
 
 
 0.2 (2009-08-12)
